<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_collections"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.collections.listsandMaps.mvp.view.fragments.ListFragment">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:columnCount="8"
        android:layout_marginVertical="23dp"
        android:layout_marginHorizontal="23dp"
        android:padding="@dimen/text_view_padding"

        android:rowCount="4">


        <TableRow>


            <TextView
                android:id="@+id/table_row_names"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nameTable"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insert_at_the_beginning"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insert_at_the_middle"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insert_at_the_end"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find_element"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_at_the_beginning"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_at_the_middle"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_at_the_end"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />
        </TableRow>

        <TableRow>


            <TextView
                android:id="@+id/tb_linkList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:height="24dp"
                android:text="@string/linkedlist"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_insert_atBeginning_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atMiddle_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atEnd_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_findElement_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_first_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_midddle_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_last_linkList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tb_arraylist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:height="45dp"
                android:text="@string/arraylist"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_insert_atBeginning_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atMiddle_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atEnd_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_findElement_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_al_delete_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_midddle_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_last_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tb_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorAccent"
                android:text="@string/write_on_Copy"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_insert_atBeginning_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="1"
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atMiddle_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_insert_atEnd_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_findElement_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_al_delete_first_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_midddle_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_delete_last_copy_on_write_arList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />
        </TableRow>


    </TableLayout>


</RelativeLayout>