<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.collections.listsandMaps.mvp.view.fragments.MapFragment">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/table_layout_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow>

            <TextView
                android:id="@+id/table_row_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_map"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/adding_new"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_by_key"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/removing"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tv" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tr_hash_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="HashMap"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_add_new_hash_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_select_by_key_hash_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_removing_hash_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tr_tree_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TreeMap"
                android:textSize="@dimen/tv"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_add_new_tree_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_select_by_key_tree_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />

            <TextView
                android:id="@+id/tv_removing_tree_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="@dimen/tv" />


        </TableRow>
    </TableLayout>


</LinearLayout>